--- a/.github/workflows/vpn.yaml
+++ b/.github/workflows/vpn.yaml
@@ -8,5 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+    - run: curl -fsSL https://tailscale.com/install.sh | sh
+    - run: echo 'net.ipv4.ip_forward = 1' | sudo tee -a /etc/sysctl.d/99-tailscale.conf
+    - run: echo 'net.ipv6.conf.all.forwarding = 1' | sudo tee -a /etc/sysctl.d/99-tailscale.conf
+    - run: sudo sysctl -p /etc/sysctl.d/99-tailscale.conf
+    - run: sudo tailscale up --advertise-exit-node --authkey ${{ secrets.AUTHKEY }}
+    - run: sudo tailscale ip | head -n 1
+    - run: sleep infinity
