--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,4 +6,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - run: sleep 7200
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
